--- a/subway/uht/whomust-interactivetool.html
+++ b/subway/uht/whomust-interactivetool.html
@@ -795,35 +795,7 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
          
-		<p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
-				
-				 <ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
- 					 <li class="cnjnctn-col">
-   						 <p>The property is a residential property</li>
- 					 <li class="cnjnctn-col">
-  						  <p>You are an owner of the residential property </li>
- 					 <li class="cnjnctn-col">
-						 <p>You are <strong>not</strong> an <strong>excluded owner</strong> of the residential property</li>
-				</ul>
-		 
-		 <details>
-			 <summary>What is a residential property</summary>
-			 <p>Content</p>
-		 </details>
-		 
-			<details>
-			 <summary>Who is considered an owner</summary>
-			 <p>Content</p>
-		 </details>	
-		 <br>
-				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
-<p>If you are an affected owner, you have to file an annual return for each of your residential properties. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
-		 <p>Even if your ownership of a residential property is exempt from the underused housing tax for a calendar year, if you are an affected owner, you still have to file a return for the residential property and indicate the applicable exemption in your return.</p>
-
-<p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
-		 
-		 
-		 
+		[Intro content]
 		 
 		 
 		 
