--- a/subway/uht/whomust-interactivetool.html
+++ b/subway/uht/whomust-interactivetool.html
@@ -781,12 +781,12 @@ margin-left: 38px;
             <nav aria-label="Section menu">
             <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
             <ul class="gc-navseq">
-                <li class="active"><a aria-current="page"><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-                <li><a href="calculate.html">Calculate what you owe</span></a></li>
-	<li><a href="downloadcomplete.html">Download and complete the return</span></a></li>
-                <li><a href="filereturn.html">File the return</span></a></li>
-                <li><a href="paytax.html">Pay the tax</span></a></li>
-                <li><a href="contact.html">Contact us</span></a></li>
+                <li class="active"><a aria-current="page"><a href="">Who must file a return and pay the tax</span></a></li>
+                <li><a href="">Calculate what you owe</span></a></li>
+	<li><a href="">Download and complete the return</span></a></li>
+                <li><a href="">File the return</span></a></li>
+                <li><a href="">Pay the tax</span></a></li>
+                <li><a href="">Contact us</span></a></li>
 			</ul>
             <!-- ajax replace to make active menu item -->
             <div class="hidden-sm hidden-xs" data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/digital-economy-gsthst.html#related-menu"> </div>
