--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -334,6 +334,7 @@
 						
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
  <li class="cnjnctn-col"><p>   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if the amount is <strong>zero or negative</strong>. </p>
+<p>You <strong>do not deduct</strong> CPP2 contributions in this situation.</p>
 <p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step3a">Calculate CPP contributions deductions</a>.</p> </li>
 <li class="cnjnctn-col">
   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if the amount is <strong>positive</strong>. </li>
@@ -701,6 +702,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
  <li class="cnjnctn-col"><p>   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if the amount is <strong>zero or negative</strong>. </p>
+<p>You <strong>do not deduct</strong> CPP2 contributions in this situation.</p>
 <p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step3a">Calculate CPP contributions deductions</a>.</p> </li>
 <li class="cnjnctn-col">
   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if the amount is <strong>positive</strong>. </li>
@@ -1046,6 +1048,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
  <li class="cnjnctn-col"><p>   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if the amount is <strong>zero or negative</strong>. </p>
+<p>You <strong>do not deduct</strong> CPP2 contributions in this situation.</p>
 <p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#tab-ynd">Calculate CPP contributions deductions</a>.</p> </li>
 <li class="cnjnctn-col">
   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if the amount is <strong>positive</strong>. </li>
