--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -531,6 +531,7 @@
    <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Code 104 - Other information: <strong>Research grants</strong></li>
                          <li><span class="fas fa-check fa-li text-success"></span>Code 105 - Other information: <strong>Scholarships, fellowships, bursaries, and artists' project grants</strong></li>
+	    <li><span class="fas fa-check fa-li text-success"></span>Code 210 - Other information: <strong>Postdoctoral fellowship income</strong></li>
                       
                      </ul>
  
