--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -314,7 +314,7 @@
 <h2 id="h_1">Determine if the benefit is taxable</h2>
 <p class="mrgn-bttm-lg">Generally, if you provide a <a href="#benefit" aria-controls="centred-popup" class="wb-lbx" role="button">benefit&nbsp;<span class="far fa-question-circle"></span></a>, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for educational assistance to your employee, a former employee or an employee's family member, the benefit is taxable.  Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
-<details><summary>What is a scholarship, a bursary and a research grant</summary>
+<details><summary>What is a scholarship, a bursary, a research grant or a fellowship</summary>
 <h4>Scholarships</h4>
 <p>Scholarships are amounts awarded to students, or on their behalf, to enable them to pursue their education. They can include amounts paid to defray living expenses, as well as amounts that are directly related to tuition fees. They usually apply to studies at the postsecondary level or beyond, intended to obtain a university degree, a diploma or a certificate. However, there are circumstances under which scholarships are awarded for education below the postsecondary school level. Normally, a student is not expected to do specific work for the payer in exchange for a scholarship or bursary.</p>
 <h4>Bursaries</h4>
@@ -322,6 +322,8 @@
 <h4>Research grants</h4>
 <p>Research Grants are a sum of money provided to an individual for the payment of expenses necessary to conduct a research project. The grant may include personal or living expenses. The grant may also include an element of remuneration to the recipient.  Funds originating from various sources may be paid to and administered by a college, university, hospital, or similar institution where the researcher is employed. However, only that part of the grant paid to, or otherwise available for, the researcher is considered to be a research grant.</p>
 <p>Learn more on the different types of research grants: <a href="https://canada.grantwatch.com/cat/29/research-and-evaluation-grants.html">Research Grants in Canada</a></p>
+<h4>Fellowship</h4>
+<p>The term fellowship is not defined in the Income Tax Act. Generally, a fellowship is an amount paid or benefits given for the purpose of advancing a person’s education. It is similar to a scholarship or a bursary, with the difference that a fellowship is generally awarded to a graduate student by a university, charity, or similar body for doctoral studies or post-doctoral work.</p>
 </details>
 
 <h3>Situations - Benefit provided to your current, former or future employee</h3>
