--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -615,15 +615,15 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details >  <summary>Code 104 – Research grants <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd104">Report research grants you paid to a recipient.</p> 
+  <p id="cd104">Report the full amount of the research grant you paid to the recipient.</p> 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance - Research grants</a></p> 
 </details> 
 </li>
 <li class="code-num">
  <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd105">Report scholarships, fellowships, bursaries, and artists' project grants you paid to a recipient.</p> 
+  <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient.</p> 
 <h4>Postdoctoral fellowship income</h4>
-<p>Report postdoctoral fellowship income you paid using code 105 and <a href="#cd210">code 210</a>. </p>
+<p>Report postdoctoral fellowship income you paid using code 105 <strong>and</strong> <a href="#cd210">code 210</a>. </p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
  </details> 
 </li>
@@ -891,7 +891,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details>  <summary>Code 210 – Postdoctoral Fellowship Income <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd210">Report postdoctoral fellowship income you paid using code 210 and <a href="#cd105">code 105</a>. </p>
+ <p id="cd210">Report the full amount of the postdoctoral fellowship income you paid using code 210 <strong>and</strong> <a href="#cd105">code 105</a>. </p>
  <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
 </details>
 </li>
