--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -494,7 +494,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough tax deducted or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
       <p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
@@ -516,7 +516,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough tax deducted or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 		      <p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
@@ -525,7 +525,8 @@
             <details>
               <summary>Situation: Employee works in Canada but <strong>does not</strong> report for work (never physically and not considered attached under the new CRA administrative policy) at an establishment of the employer</summary>
               <div id="ajax-resultresnot1">
-                <p>The POE is the province or territory where the <strong>establishment of the employer is located</strong> from which the employee's <strong>salary is paid</strong>. 
+                <p>The POE is the province or territory where the <strong>establishment of the employer</strong> from which the employee's <strong>salary is paid is located</strong>.</p>
+
 <p>Generally, this is one of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -539,7 +540,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough tax deducted or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 <p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
