--- a/subway/acwbindex.html
+++ b/subway/acwbindex.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>[ABC] - Canada.ca</title>
+         <title>[Canada workers benefit] - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -57,25 +57,25 @@
          <main role="main" property="mainContentOfPage" class="container">
             <div aria-hidden="true">
                <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted"> </p>
-               <h1 class="gc-thickline mrgn-tp-0">[ABC]</h1>
+               <h1 class="gc-thickline mrgn-tp-0">Canada workers benefit</h1>
                <div class="row">
                   <div class="col-md-8">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                     <p>The Canada workers benefit (CWB) is a refundable tax credit to help individuals and families who are working and earning a low income.</p>
+                     <p>The CWB has two parts: a basic amount and a disability supplement.</p>
+                     <p>You can claim the CWB when you file your income tax return.</p>
+                     <p>Starting in July 2023 and based on the 2022 taxation year, the Advanced Canada workers benefit (ACWB) will provide advance payments equivalent to 50% of the CWB across 3 quarterly payments. The remaining amount will be paid during the following tax season. This initiative puts more money in the workers' pockets to help cope with the rising cost of living.</p>
+                     <p>This year, the first quarterly payment will be issued on July 28, 2023. The two remaining quarterly payments will be issued on October 12, 2023 and January 12, 2024.</p>
+                     
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
                         <dl>
-                           <dt><a href="#">[Page 1]</a></dt>
+                           <dt><a href="#">Eligibility</a></dt>
+                           <dd>content</dd>
+                           <dt><a href="#">How to claim the CWB</a></dt>
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">[Page 2]</a></dt>
+                           <dt><a href="#">Benefit amounts and when you will receive them</a></dt>
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">[Page 3]</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">[Page 4]</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">[Page 5]</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">[Page 6]</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
+                           
                         </dl>
                      </nav>
                     <aside class="gc-subway-support">
