--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -331,26 +331,16 @@
 </li>
 
 <li><h3 id="step3">Determine if the allowance or reimbursement is reasonable</h3>
-<p>You must consider <strong>all of the facts </strong>relevant to your employee's situation to determine if the travel expense is considered <strong>reasonable</strong>.</p>
-<p>This determination must be done based on a review of the facts in each specific situation.</p>
-<p>Generally, the CRA considers the amount to be <strong>reasonable </strong>if:</p>
+<p>You must consider <strong>all of the facts </strong>relevant to your employee's situation to determine if an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for the cost of travel expense is considered <strong>reasonable</strong>.</p>
+
+<p>Generally, the CRA considers an allowance or a reimbursement <strong>reasonable </strong>if:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Employee is required to travel in the course of their employment duties (step 2) </li>
-<li class="cnjnctn-col">Your employee kept the required records, and you received a copy to support these amounts. For example, receipts for:
-<ul  class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Airfare</li>
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Hotel</li>
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Meal</li>
+<li class="cnjnctn-col">The amount covers the expenses that you reasonably expect your employee to have to pay </li>
+<li class="cnjnctn-col">The payment of travel expenses is not a form of additional remuneration or a form of tax avoidance </li>
+<li class="cnjnctn-col">You can justify your position that the amount is reasonable </li>
+<li class="cnjnctn-col">If the payment is a reimbursement or an accountable advance, your employee kept the required records and you received a copy to support these amounts. </li>	
 </ul>
-</li>
-<li class="cnjnctn-col">You can justify your position for the amount being reasonable </li>
-<li class="cnjnctn-col">It is not a form of additional remuneration and is not a form of tax avoidance </li>
-</ul>
-<p>If you <strong>cannot </strong>get the required records, you must use reasonable estimates to determine the amount is based on facts.</p>
-<p>Depending on your situation, you may determine that a reasonable amount would be lower or higher. </p>
-<p>To confirm what the CRA would consider reasonable in your situation, you can ask for an advance income tax ruling that is binding on the CRA.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/tax-professionals/income-tax-rulings-interpretations.html">Income tax rulings and technical interpretations</a></p>
 
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
