--- a/subway/acwbindex.html
+++ b/subway/acwbindex.html
@@ -64,7 +64,7 @@
                      <p>The CWB has two parts: a basic amount and a disability supplement.</p>
                      <p>You can claim the CWB when you file your income tax return.</p>
                      <p>Starting in July 2023 and based on the 2022 taxation year, the Advanced Canada workers benefit (ACWB) will provide advance payments equivalent to 50% of the CWB across 3 quarterly payments. The remaining amount will be paid during the following tax season. This initiative puts more money in the workers' pockets to help cope with the rising cost of living.</p>
-                   <div class="alert alert-warning hidden provisional" id="action-some-checks">
+                   <div class="alert alert-info">
                         <h4>This year's payments</h4>
                         
                     
