--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -411,7 +411,7 @@
 <h4 id="outside">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling <strong>outside of your municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The travelling is from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
+<li class="cnjnctn-col">The travel allowance is provided for travel away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
 <li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
@@ -421,10 +421,10 @@
 
 <details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
 <h4 id="inside">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you provide a reasonable travel allowance (other than an allowance related to the use of a vehicle) to your employee for travelling <strong>within a municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, if you provide a reasonable travel allowance (other than an allowance related to the use of a vehicle) to your employee for travelling <strong>within your municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The travelling is within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
-<li class="cnjnctn-col">The travelling is to make sure your employee can perform their duties in a more efficient manner </li>
+<li class="cnjnctn-col">Your municipality or metropolitan area is where your establishment is located and where your employee ordinarily reports</li>
+<li class="cnjnctn-col">The travel allowance is provided to your employee to perform their duties in a more efficient manner </li>
 <li class="cnjnctn-col">The amount of the allowance is reasonable (step 3), for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
 <li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 3)</li>
  <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of the allowance </li>
@@ -509,8 +509,9 @@
 <li class="cnjnctn-col">The trip was arranged as an incentive award trip for your employees or your customers</li>
 <li class="cnjnctn-col">Your employee acts as <strong>host</strong> for the incentive trip</li>
 <li class="cnjnctn-col">Your employee works directly in business activities <strong>at least 90%</strong> of each day (a substantial part)</li>
-<li class="cnjnctn-col">Your employee's travelling expenses are considered necessary to accomplish the business objectives of the trip. </li>
 </ul>
+
+<p>Your employee's travelling expenses are considered necessary to accomplish the business objectives of the trip. </p>
 
 <h4>Taxable situation</h4>
 <p>If the travel expenses paid for your employee acting as host of the incentive award trip <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
@@ -546,7 +547,7 @@
                      	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">Value of the benefit <strong>to be included on the T4 slip </strong>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">Value of the benefit <strong>to be included on the T4 slip in box 14 and code 40</strong>
                                        </span></span> 
                                     </li>
 		
@@ -658,10 +659,7 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(a)</a></dt>
-<dd> Value of benefits – Board, lodging and subsidized or free rent or other benefit (of any kind)</dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(a)(iii)</a></dt>
-<dd> Use of an automobile</dd>
+
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)</a></dt>
 <dd>Taxable allowances (in cash)</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(i) </a></dt>
@@ -674,60 +672,12 @@
 <dd> Representation or other special allowances (agent-general of a province – Period in Ottawa)</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(v)</a></dt>
 <dd> Reasonable allowances for travel expenses (in connection with the selling of property or negotiating of contracts for the employee's employer) </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(v.1) </a></dt>
-<dd> Allowances for board and lodging to a monthly maximum of $300 (members of a sports team or recreation program) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vi) </a></dt>
 <dd>  Reasonable allowances received by a minister or clergyman </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii) </a></dt>
 <dd> Reasonable allowances for travel expenses (restriction at the municipal or regional level) </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii.1)</a></dt>
-<dd> Reasonable allowances for the use of a motor vehicle (received from the employee's employer for travelling in the performance of employment duties) </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(x)</a></dt>
-<dd>  Allowance for the use of the vehicle for the purpose of the allowance is not based solely on the number of kilometers </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(ix)</a></dt>
-<dd> Allowance not in excess of reasonable amounts for tuition fees (child living away from the employee's domestic establishment – official language) </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(xi)</a></dt>
-<dd> Reimbursement for supplementary business insurance, toll or ferry charges if the allowance was determined without reference to those reimbursed expenses</dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(e) and 6(2)</a></dt>
-<dd> Standby charge and calculation – Employer's automobile available for personal use </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(e)(i)</a></dt>
-<dd> description </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(e)(ii)</a></dt>
-<dd> Amounts repaid by the employee for standby charge </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(e)(ii)</a></dt>
-<dd> Amounts repaid or reimbursed by the employee for standby charge </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(f.1)</a></dt>
-<dd> Canadian Forces members and veterans income replacement benefits </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(k)</a></dt>
-<dd> Automobile operating expense benefit </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(l)</a></dt>
-<dd> Automobile operating benefit – Where amounts are not calculated under 6(1)(k) and an employee receives payment (not an allowance) for the cost of operating the employee's automobile </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1.1)</a></dt>
-<dd> Parking not included in the automobile benefit. Parking is a separate benefit.</dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(2)</a></dt>
-<dd> Standby charge + calculation – employer's automobile available for personal use</dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(6)</a></dt>
-<dd> Employment at special work site or remote location</dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(7)</a></dt>
-<dd> GST or HST payable by the employer in purchasing or leasing an employer-provided automobile is included in the benefit calculation </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-56.html#docCont">ITA: 81(3.1)</a></dt>
 <dd>Travel expenses  </dd>
-
-
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-203.html#h-317484">ITA: 248</a></dt>
-<dd> Definition of automobile </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-203.html#h-317484">ITA: 248(1)</a></dt>
-<dd> Definitions </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-205.html#docCont">ITA: 251(2)(a)</a></dt>
-<dd> Relationship between two individuals </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-205.html#docCont">ITA: 251(2)(b)</a></dt>
-<dd> Relationship between a corporation and a person (individual, corporation, partnership, or trust) </dd>
-<dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-205.html#docCont">ITA:  251(2)(c)</a></dt>
-<dd> Relationship between two corporations </dd>
-<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-64.html#docCont">ITR: 7305.1</a></dt>
-<dd> Prescribed operating expense amounts </dd>
-<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-64.html#docCont">ITR: 7306</a></dt>
-<dd> Prescribed exemption limit on deductible allowances paid by employers </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 12(1)</a></dt><dd> Amount of contributory salary and wages </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/E-15/page-42.html#h-191350">ETA: 173</a></dt><dd> Taxable benefit is considered a supply for GST/HST purposes </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html">IECPR: 2(1)</a></dt><dd> Amount of insurable earnings </dd>
