--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -690,7 +690,7 @@
 
 <li><h3>Determine if you need to fill out Form T2200 if the benefit is taxable</h3>
 <div id="ajax-t2200">	
-<p id="step8">You may need to fill out Form T2200, Declaration of Conditions of Employment, if your employee is eligible to deduct part of the cost from their income income tax and benefit return.</p>
+<p id="step8">You may need to fill out Form T2200, Declaration of Conditions of Employment, if your employee is eligible to deduct part of the cost from their income tax and benefit return.</p>
 <p>If you include an allowance as income for your employee and the allowance is considered too low, you <strong>must fill out and sign </strong><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2200.html">Form T2200, Declaration of Conditions of Employment</a> and your employee can deduct on their income tax and benefit return: </p>
 
 <ul class="fa-ul">
