--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -464,7 +464,7 @@
 </details>
 
 <details><summary>Situation: You pay travel expenses on a <strong>business trip for your employee </strong></summary>
-<h4 id="spouse">Non-taxable situation</h4>
+<h4 id="businesstrip">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you paid travel expenses on a business trip to your employee for business-related travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The amount of the travel expenses paid is reasonable (step 2) </li>
