--- a/subway/acwb/index.html
+++ b/subway/acwb/index.html
@@ -112,23 +112,16 @@
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
                         <dl>
-                           <dt><a href="#">Eligibility</a></dt>
-                           <dd>content</dd>
+                           <dt><a href="#">Who is eligible</a></dt>
+                           <dd>Find out if you are eligible to receive the CWB</dd>
                            <dt><a href="#">How to claim the CWB</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="#">Benefit amounts and when you will receive them</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
+                           <dd>Learn how to claim the CWB</dd>
+                           <dt><a href="#">CWB benefit amounts and when you will receive them</a></dt>
+                           <dd>Find out how much you are eligible for and when you will receive your payments</dd>
                            
                         </dl>
                      </nav>
-                    <aside class="gc-subway-support">
-                        <h2 class="h4">Related</h2>
-                        <ul class="list-unstyled">
-                           <li><a href="#">link</a></li>
-                           <li><a href="#">link</a></li>
-                           <li><a href="#">link</a></li>
-                        </ul>
-                     </aside>
+                   
                   </div>
                </div>
             </div>
