--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -199,7 +199,7 @@
                         </tr>
                         			     			      
 			   <tr>
-                           <td> <p><a href="travel-expenses.html">Travel expenses</a> <span class="label label-info">CVB - SME reviewing</span> </p>
+                           <td> <p><a href="travel-expenses.html">Travel expenses</a> <span class="label label-info">CVB - Ready for ABSB</span> </p>
 			<p>Includes:</p> 
 						   <ul>
 							 <li><a href="travel-expenses.html#part">Employee works part-time</a></li>  
