--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>ZZZ - [ABC] - Canada.ca</title>
+         <title>Who is eligible - Canada workers benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -48,7 +48,7 @@
                 title: "Tax credits and benefits for individuals",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "[ABC]",
+                title: "Canada workers benefit",
                 href: "index.html"
               }
               ],
@@ -59,24 +59,24 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>[ABC]</h1>
+               <h1>Canada workers benefit</h1>
                <ul>
-                  <li><a href="#" class="active">[Page 1]</a></li>
-                  <li><a href="#">[Page 2]</a></li>
-                  <li><a href="#">[Page 3]</a></li>
+                  <li><a href="#" class="active">Who is eligible</a></li>
+                  <li><a href="#">How to claim</a></li>
+                  <li><a href="#">CWB payments</a></li>
                   <li><a href="#">[Page 4]</a></li>
                   <li><a href="#">[Page 5]</a></li>
                   <li><a href="#">[Page 6]</a></li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">ZZZ</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Who is eligible</h1>
+            <p>Depending on your income and other circumstances, you may be eligible for the Canada workers benefit (CWB).</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
+               <li><a href="#h-1">Eligibility for the basic amount</a></li>
+               <li><a href="#h-2">Eligibility for the disability supplement</a></li>
+               <li><a href="#h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</a></li>
+               <li><a href="#h-4">Life changes that affect the ACWB</a></li>
             </ul>
             <h2 id="h-1">Heading A</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
