--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -56,7 +56,7 @@
       </script>
 <main role="main" property="mainContentOfPage" class="container">
 
-    <h1 property="name" id="wb-cont" class="provisional gc-thickline"><span class="stacked"><span>Service feedback </span> - <span>Personal income tax</span> </span></h1>
+    <h1 property="name" id="wb-cont" class="provisional gc-thickline"><span>Service feedback </span></h1>
 	
  <!--<p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small">
