--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -80,11 +80,12 @@
             </ul>
             <h2 id="h-1">Eligibility for the basic amount</h2>
             <p>You are eligible for the basic amount of the CWB if you:</p>
+            <ul class="fa-ul">
+	<li><span class="fas fa-check text-success fa-li"></span> 
             
-            <ul>
-               <li>earn working income</li>
-               <li>are a resident of Canada throughout the year</li>
-               <li>are 19 years of age or older on December 31, or you live with your spouse or common-law partner or your child</li>
+               earn working income</li>
+               <li><span class="fas fa-check text-success fa-li"></span> are a resident of Canada throughout the year</li>
+               <li><span class="fas fa-check text-success fa-li"></span> are 19 years of age or older on December 31, or you live with your spouse or common-law partner or your child</li>
             </ul>
             
             <p>You are <strong>not eligible for the CWB</strong> if you:
