--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -221,7 +221,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/retirement-compensation-arrangements.html">Payments from retirement compensation arrangements</a> </td>
+                           <td><a href="rca.html">Payments from retirement compensation arrangements (RCA)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
