--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -141,8 +141,8 @@
 <li><a href="epsp.html" class="hidden-xs hidden-sm"> Payments from an employees profit sharing plan (EPSP)</a>
 <a href="epsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from an employees profit sharing plan (EPSP)</a></li>
 
-<li><a href="rca.html" class="hidden-xs hidden-sm"> Payments from retirement compensation arrangements</a>
-<a href="rca.html#gc-document-nav" class="visible-xs visible-sm">Payments from retirement compensation arrangements</a></li>
+<li><a href="rca.html" class="hidden-xs hidden-sm"> Payments from retirement compensation arrangements (RCA)</a>
+<a href="rca.html#gc-document-nav" class="visible-xs visible-sm">Payments from retirement compensation arrangements (RCA)</a></li>
 
 <li><a href="payments-wlrp.html" class="hidden-xs hidden-sm"> Payments from wage-loss replacement plans</a>
 <a href=" payments-wlrp.html#gc-document-nav" class="visible-xs visible-sm">Payments from wage-loss replacement plans</a></li>
