--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -107,7 +107,13 @@
 	<li><span class="fas fa-times text-danger fa-li"></span>are confined to a prison or similar institution for a period of at least 90 days during the year</li>
 			  <li><span class="fas fa-times text-danger fa-li"></span>do not have to pay tax in Canada because they are an officer or servant of another country, such as a diplomat, or are a family member or employee of such a person</li>
 		 </ul>
-		 
+		 <h3>Who an eligible dependant is</h3>
+		 <p>For CWB purposes, an eligible dependant:
+			<ul class="fa-ul">
+	<li><span class="fas fa-check text-success fa-li"></span>is your or your spouse's or common-law partner's child</li>
+			<li><span class="fas fa-check text-success fa-li"></span>is under 19 years of age and lives with you on December 31</li>
+				<li><span class="fas fa-check text-success fa-li"></span>is not eligible for the CWB</li>
+		 </ul>
 		 
             <h2 id="h-2">Heading B</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
