--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -115,8 +115,12 @@
 				<li><span class="fas fa-check text-success fa-li"></span>is not eligible for the CWB</li>
 		 </ul>
 		 
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+            <h2 id="h-2">Eligibility for the disability supplement</h2>
+            <p>You may be eligible for the disability supplement of the CWB if:</p>
+		 <ul class="fa-ul">
+	<li><span class="fas fa-check text-success fa-li"></span>you are eligible for the disability tax credit and have an approved Form T2201, Disability Tax Credit Certificate, on file with the CRA</li>
+		 </ul>
+		 
             <h2 id="h-3">Heading C</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 id="h-4">Heading D</h2>
