--- a/payroll/calculate/benefit/retirement.html
+++ b/payroll/calculate/benefit/retirement.html
@@ -352,7 +352,7 @@
 <h4 id="rca">Non-taxable situation</h4>
 <p>Under the Income Tax Act, the benefit qualifies for an exemption and is <strong>not </strong>taxable if it is governed by a retirement compensation arrangement (RCA).</p>
 
-<p>Continue to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/retirement-compensation-arrangements.html">Payments from retirement compensation arrangements (RCA)</a>.</p>
+<p>Continue to <a href="/cra-arc/payroll/calculate/payment/rca.html">Payments from retirement compensation arrangements (RCA)</a>.</p>
 </details>
 
 
