--- a/cops/payments-paiements/en/payment-instalments.html
+++ b/cops/payments-paiements/en/payment-instalments.html
@@ -50,7 +50,7 @@
              title: "Payments and the CRA",
              href: "index.html"
            }, {
-             title: "Pre-pay taxes",
+             title: "Pay your taxes in advance",
              href: "pre-pay.html"
            }
 		   ],
