--- a/cops/payments-paiements/en/index.html
+++ b/cops/payments-paiements/en/index.html
@@ -116,7 +116,7 @@
           <p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to.</p>
         </div>
         <div class="col-lg-4 col-md-6">
-          <h3><a href="pre-pay.html">Pre-pay taxes</a></h3>
+          <h3><a href="pre-pay.html">Pay your taxes in advance</a></h3>
           <p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to.</p>
         </div>
         <div class="col-lg-4 col-md-6">
