--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -143,7 +143,7 @@
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
-                  <li class="next"><a href="section2-en.html" rel="next"><span class="wb-inv">Next: </span>[Page 2]</a></li>
+                  <li class="next"><a href="section2-en.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
                </ul>
             </nav>
             <div id="def-preFooter"></div>
