--- a/cops/payments-paiements/en/pre-pay.html
+++ b/cops/payments-paiements/en/pre-pay.html
@@ -71,7 +71,12 @@
           <p> Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
         </section>
       </div>
-     
+      <div class="col-lg-4 col-md-6">
+        <section>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-authorized-debit.html">Pay in advance using pre-authorized debit (PAD)</a></h3>
+          <p> Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
+        </section>
+      </div>
      
     </div>
   </section>
