--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -137,7 +137,7 @@
 			   <li><span class="fas fa-times text-danger fa-li"></span>emigrated from Canada</li>
 		 </ul>
 		 <p>However, you remain eligible for any payment periods prior to the event.</p>
-		 <h3>Deceased individuals are not eligible for the ACWB</he>
+		 <h3>Deceased individuals are not eligible for the ACWB</h3>
 		 <p>An individual deceased prior to July 1 of the benefit year is not eligible to receive the ACWB.</p>
 		 
             <nav class="gc-subway-pagination">
