--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -331,7 +331,7 @@
 </li>
 
 <li><h3 id="step3">Determine if the allowance or reimbursement is reasonable</h3>
-<p>You must consider <strong>all of the facts </strong>relevant to your employee's situation to determine if an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for the cost of travel expense is considered <strong>reasonable</strong>.</p>
+<p>You must consider <strong>all of the facts </strong>relevant to your employee's situation to determine if the amount of an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for the cost of travel expense is considered <strong>reasonable</strong>.</p>
 
 <p>Generally, the CRA considers an allowance or a reimbursement <strong>reasonable </strong>if:</p>
 
@@ -364,7 +364,7 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee incurs the expenses from travelling <strong>to and from the part-time job</strong> </li>
 <li class="cnjnctn-col">You and your employee are <strong>at arm's length</strong> </li>
-<li class="cnjnctn-col">Your employee is in <strong>one</strong> of the following situation:
+<li class="cnjnctn-col">Your employee is in <strong>one</strong> of the following situations:
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">Employee is a teacher or professor who works part-time and <strong>all</strong> of the following apply:
 <ul class="list-unstyled cnjnctn-type-and">
@@ -412,11 +412,11 @@
 <p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling <strong>outside of your municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The travel allowance is provided for travel away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
-<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
+<li class="cnjnctn-col">The expenses are related to the performance of their employment duties (step 2)</li>
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
 <h4>Taxable situation</h4>
-<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 </details>
 
 <details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
@@ -469,15 +469,15 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The amount of the travel expenses paid is reasonable (step 2) </li>
 <li class="cnjnctn-col">You require their presence on the <strong>business trip to accomplish the business objectives</strong> of the trip</li>
-<li class="cnjnctn-col">Employee or their spouse (or common-law partner) <strong>spends more than 50% of the time on business-related</strong> activities</li>
+<li class="cnjnctn-col">Employee <strong>spends more than 50% of the time on business-related</strong> activities</li>
 
 </ul>
 
 <p>The amount of the expense which is not taxable is the amount of the employee's travelling expenses necessary to accomplish the business objectives of the trip.</p>
 
 <h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
-<p>For example, the travel is taxable in one of the following situation:</p>
+<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>For example, the expenses paid or reimbursed are taxable in the following situations:</p>
 <ul class="fa-ul">	 
 	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> Free holiday or vacation you paid to your employee, the employee's family, or both </li>
 	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> You pay a third party for a trip or vacation for your employee or their family</li>
@@ -629,7 +629,7 @@
 			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">2,400 is the value of the benefit to be included on employee's T4 slip 
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$2,400 is the value of the benefit to be included on employee's T4 slip 
                                        </span></span> 
                                     </li>		
 
