--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -73,8 +73,13 @@
 </div>
 <div class="clear"></div>
 <h2 id="toc0">Types of feedback</h2>
-<p>Content.</p>
-	
+<p>There are 3 type of feedback you can give the CRA.</p>
+	<h3>Compliment</h3>
+	<p>You can submit a compliment about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
+	<h3>Suggestion</h3>
+	<p>You can submit a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
+	<h3>Complaint</h3>
+	<p>You can submit a complaint if you are not satisfied with the service that you received from the CRA. See Your Rights for more information on your service rights when dealing with the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>
 	<h2 id="toc1">Feedback about service you received</h2>
 <p>Content.</p>
 	
@@ -82,12 +87,10 @@
 <p>Content.</p>
 	
 	<h2 id="toc3">Your rights</h2>
-<p>Content.</p>
+<p>You can expect to be treated fairly and get a high level of service each time you deal with the CRA. All information you give to the CRA will be treated as confidential under the Privacy Act.</p>
+	<p>For details:  <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/taxpayer-bill-rights.html">Taxpayer Bill of Rights</a></p>
 	
-<!--<p>You will receive a T4E slip at tax time or you may also get your T4E information from <a href="https://www.canada.ca/en/employment-social-development/services/my-account.html">My Service Canada Account</a>.</p>
-<h3>Other tax slips you may receive</h3>
-<p>You may get other tax slips in addition to the T4E slip.</p>
-	<div class="col-md-8">-->
+
 
 
 
