--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -75,11 +75,11 @@
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
 	<h3>Compliment</h3>
-	<p>You can submit a compliment about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
+	<p>You can submit feedback about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Suggestion</h3>
-	<p>You can submit a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
+	<p>You can submit a feedback on a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Complaint</h3>
-	<p>You can submit a complaint if you are not satisfied with the service that you received from the CRA. See Your Rights for more information on your service rights when dealing with the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>
+	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>
 	<h2 id="toc1">Feedback about service you received</h2>
 <p>Content.</p>
 	
