--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -62,7 +62,18 @@
 <ul class="pull-left mrgn-lft-md list-unstyled small">
 <li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/tax-slips-itemized.html">T4E slips - Service Canada</a></li>
 </ul><div class="clearfix">&nbsp;</div>-->
-<div class="span-4 module-table-contents">
+	
+	<h2 class="h3">On this page</h2> 
+  <ul>
+<li><a href="#toc0">Types of feedback</a></li>
+    <li><a href="#toc1">Feedback about service you received</a></li>
+    <li><a href="#toc3">Non-service feedback</a></li>
+    <li><a href="#toc34">Your rights</a></li>
+  
+ 
+  </ul>
+        <div class="clear"></div>
+<!--<div class="span-4 module-table-contents">
   <p>Table of contents</p>
   <ul>
     <li><a href="#toc0">Types of feedback</a></li>
@@ -71,7 +82,7 @@
     <li><a href="#toc34">Your rights</a></li>
   </ul>
 </div>
-<div class="clear"></div>
+<div class="clear"></div>-->
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
 	<h3>Compliment</h3>
