--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -85,6 +85,21 @@
 <div class="clear"></div>-->
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
+	
+	<div class="cnjnctn-type-or cnjnctn-xs">
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
+<p>Submit a positive service experience with the CRA</p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Suggestion<span class="wb-inv">: Option 2 of X</span></h4>
+<p>Submit a suggestion about improving the CRA service(s)</p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Complaint<span class="wb-inv">: Option 3 of X</span></h4>
+<p>Submit a complaint about the service you received from the CRA</p>
+</div></div>
+	<div class="clear"></div>
 	<h3>Compliment</h3>
 	<p>You can submit feedback about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Suggestion</h3>
