--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -77,15 +77,15 @@
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
-<p>Submit a positive service experience with the CRA</p>
+<p>Submit a positive experience with the CRA</p>
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Suggestion<span class="wb-inv">: Option 2 of X</span></h4>
-<p>Submit a suggestion about improving the CRA service(s)</p>
+<p>Submit a suggestion about improving the CRA</p>
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Complaint<span class="wb-inv">: Option 3 of X</span></h4>
-<p>Submit a complaint about the service you received from the CRA</p>
+<p>Submit a complaint about the CRA</p>
 </div></div>
 	<div class="clear"></div>
 	<h3>Compliment</h3>
