--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -82,7 +82,7 @@
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Suggestion<span class="wb-inv">: Option 2 of X</span></h4>
-<p>Submit a suggestion about improving the CRA</p>
+<p>Suggest an improvement for the CRA</p>
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Complaint<span class="wb-inv">: Option 3 of X</span></h4>
