--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -96,10 +96,51 @@
 	<h3>Complaint</h3>
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
-<p>Content.</p>
+<p>You can provide feedback on service you received from the CRA.</p>
+	
+	 
+
+	<h3>Options</h3>
+			
+	<ul>
+		<li>By phone - Call the CRA</li>	
+		<li>By form - Complete the form</li>
+		<li>By contacting the Taxpayers' Ombudsperson</li>
+	</ul>
+	
+	<h3>Methods</h3>
+			
+	<ul>
+		<li>Online dynamic form</li>	
+		<li>Fillable PDF form RC193</li>
+	</ul>
+			
+		
+	<h3>Ways to submit your feedback</h3>
+			
+	<ul>
+		<li>Online dynamic form</li>	
+		<li>Online CRA account - (My account, My Bus, Rep a client)</li>
+		<li>By fax</li>
+		<li>By mail</li>
+	</ul>
+	
+		
+		<p>The CRA service standard is to resolve the complaint within 30 business days of receiving your complaint.</p>
+		
+	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check CRA processing times</a></p>
 	
 	<h2 id="toc2">Non-service feedback</h2>
-<p>Content.</p>
+<p>These are other types of complaints or problems not related to service.</p>
+	
+	<p>Some examples:</p>
+	<ul>
+		<li>Disagree with or not understanding a letter, notice, payment, or other document received from the CRA</li>	
+		<li>Dispute an assessment, determination, or decision made by the CRA</li>
+		<li>Disagree with the Income Tax Act, or tax legislation matters</li>
+	</ul>
+		
+
 	
 	<h2 id="toc3">Your rights</h2>
 <p>You can expect to be treated fairly and get a high level of service each time you deal with the CRA. All information you give to the CRA will be treated as confidential under the Privacy Act.</p>
