--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -100,7 +100,7 @@
 	
 	 
 
-	<h3>Options</h3>
+	<h3>Options to provide feedback</h3>
 			
 	<ul>
 		<li>By phone - Call the CRA</li>	
@@ -108,7 +108,7 @@
 		<li>By contacting the Taxpayers' Ombudsperson</li>
 	</ul>
 	
-	<h3>Methods</h3>
+	<h3>Methods to use</h3>
 			
 	<ul>
 		<li>Online dynamic form</li>	
@@ -125,7 +125,7 @@
 		<li>By mail</li>
 	</ul>
 	
-		
+		<h3><span class="far fa-clock"></span>Feedback processing times</h3>
 		<p>The CRA service standard is to resolve the complaint within 30 business days of receiving your complaint.</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check CRA processing times</a></p>
