--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -126,9 +126,9 @@
 	</ul>
 	
 		<h3><span class="far fa-clock"></span>Feedback processing times</h3>
-		<p>The CRA service standard is to resolve the complaint within 30 business days of receiving your complaint.</p>
+		<p>The CRA service standard is to resolve the complaint is within 30 business days of receiving your complaint.</p>
 		
-	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check CRA processing times</a></p>
+	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
 	<h2 id="toc2">Non-service feedback</h2>
 <p>These are other types of complaints or problems not related to service.</p>
