--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -124,7 +124,13 @@
 		<li>By fax</li>
 		<li>By mail</li>
 	</ul>
-	
+	<h3>After you submit your feedback</h3>
+	<p>Your feedback will be forwarded to the:</p>
+		<ul>
+			<li>Responsible manager and/or employee for recognition</li>
+			<li>Appropriate office or program area for consideration / review </li>
+	</ul>
+	<p>A service feedback officer may contact you by phone or by mail as part of the review process. Time to resolve a complaint will depend on the complexity of the request. </p> 
 		<h3><span class="far fa-clock"></span> Feedback processing times</h3>
 		<p>The CRA service standard is to resolve the complaint is within 30 business days of receiving your complaint.</p>
 		
