--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -132,7 +132,7 @@
 	</ul>
 	<p>A service feedback officer may contact you by phone or by mail as part of the review process. Time to resolve a complaint will depend on the complexity of the request. </p> 
 		<h3><span class="far fa-clock"></span> Feedback processing times</h3>
-		<p>The CRA service standard is to resolve the complaint is within 30 business days of receiving your complaint.</p>
+		<p>The CRA service standard to resolve the complaint is within 30 business days after receiving your complaint.</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
